--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "files": [ "bin", "lib" ],
   "bin": {
-    "scriptor": "bin/scriptor.js",
+    "scriptor": "bin/scriptor.js"
   },
   "repository": {
     "type": "git",
