--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/webis-de/scriptor.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "bunyan": "^1.8.15",
     "fs-extra": "^10.0.0",
     "playwright": "1.16.3"
