--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -19,5 +19,11 @@ jobs:
         uses: codevise/documentation-js-action@v1.3.1
         with:
           input: .
-          output: ./docs
+          output: ./docs/html
           github: true
+
+      - name: Publish
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/html
