started working on VNC

--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -46,5 +46,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: skriptor:${{ steps.meta.outputs.version }}
+          build-args: version:${{ steps.meta.outputs.version }}
 
